--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "All country timezones with short codes",
   "main": "index.js",
   "license": "MIT",
-  "keywords": ["timezones"],
+  "repository": "https://github.com/pawansargar/all-timezones",
+  "keywords": [
+    "timezones"
+  ],
   "author": "Pawan Sargar"
 }
