--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "all-timezones",
+  "name": "all-timezone",
   "version": "1.0.0",
   "description": "All country timezones with short codes",
   "main": "index.js",
