--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "all-timezone",
+  "name": "all-time-zones",
   "version": "1.0.0",
   "description": "All country timezones with short codes",
   "main": "index.js",
   "license": "MIT",
-  "repository": "https://github.com/pawansargar/all-timezones",
+  "repository": "https://github.com/vamsikrishnareddybevara/all-time-zones",
   "keywords": [
     "timezones"
   ],
-  "author": "Pawan Sargar"
+  "author": "vamsi-dev"
 }
